--- a/bpdm-pool-api/pom.xml
+++ b/bpdm-pool-api/pom.xml
@@ -55,6 +55,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
         </dependency>
+         <dependency>
+            <groupId>org.eclipse.tractusx</groupId>
+            <artifactId>bpdm-gate-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
